# velox

./: .gitignore  LICENSE-MIT  Makefile  Package.swift  README.md  TODO.md
.github/workflows/: ci.yml  docs.yml
Examples/BuiltinPlugins/: main.swift  velox.json
Examples/ChannelStreaming/: main.swift  velox.json
Examples/Commands/: README.md  main.swift  velox.json
Examples/Commands/assets/: app.js  index.html  styles.css
Examples/CommandsManual/: README.md  main.swift  velox.json
Examples/CommandsManual/assets/: app.js  index.html  styles.css
Examples/CommandsManualRegistry/: README.md  main.swift  velox.json
Examples/CommandsManualRegistry/assets/: app.js  index.html  styles.css
Examples/DynamicHTML/: main.swift  velox.json
Examples/Events/: main.swift  velox.json
Examples/HelloWorld/: main.swift  velox.json
Examples/HelloWorld2/: main.swift  velox.json
Examples/HelloWorld2/assets/: app.js  index.html  styles.css
Examples/MultiWebView/: main.swift  velox.json
Examples/MultiWindow/: main.swift  velox.json
Examples/Permissions/: main.swift  velox.json
Examples/Plugins/: main.swift  velox.json
Examples/Resources/: main.swift  velox.json
Examples/Resources/resources/: config.json  data.csv  sample.txt
Examples/RunReturn/: main.swift  velox.json
Examples/Splashscreen/: main.swift  velox.json
Examples/State/: main.swift  velox.json
Examples/Streaming/: main.swift  velox.json
Examples/Tray/: main.swift  velox.json
Examples/WindowControls/: main.swift  velox.json
Plugins/VeloxRustBuildPlugin/: VeloxRustBuildPlugin.swift
Sources/VeloxBundler/: Bundler.swift
Sources/VeloxCLI/: VeloxCLI.swift
Sources/VeloxCLI/Commands/: BuildCommand.swift  BundleCommand.swift  DevCommand.swift  InitCommand.swift
Sources/VeloxCLI/Services/: DevServerChecker.swift  EnvLoader.swift  FileWatcher.swift  ProcessManager.swift  TargetDetector.swift
Sources/VeloxCLI/Utilities/: ExecutableResolver.swift  (+1 more)
Sources/VeloxMacros/: VeloxMacros.swift
Sources/VeloxMacrosImpl/: VeloxCommandMacro.swift
Sources/VeloxPluginClipboard/: ClipboardPlugin.swift
Sources/VeloxPluginDialog/: DIALOG_LIMITATIONS.md  DialogPlugin.swift
Sources/VeloxPluginMenu/: MenuPlugin.swift
Sources/VeloxPluginNotification/: NotificationPlugin.swift
Sources/VeloxPluginOS/: OSInfoPlugin.swift
Sources/VeloxPluginOpener/: OpenerPlugin.swift
Sources/VeloxPluginProcess/: ProcessPlugin.swift
Sources/VeloxPluginResources/: ResourcesPlugin.swift
Sources/VeloxPluginShell/: ShellPlugin.swift
Sources/VeloxPluginWindowState/: WindowStatePlugin.swift
Sources/VeloxPlugins/: VeloxPlugins.swift
Sources/VeloxRuntime/: Channel.swift  Command.swift  Config.swift  Event.swift  Invoke.swift  Permission.swift  Plugin.swift  ResourceRegistry.swift  Runtime.swift  Security.swift  State.swift
Sources/VeloxRuntimeWry/: CommandSupport.swift  ConfigSupport.swift  CustomProtocolSupport.swift  EventManager.swift  FFIEntryPoints.swift  MockRuntime.swift  PluginManager.swift  PluginSupport.swift  VeloxRuntimeWry.swift
Sources/VeloxRuntimeWryFFI/: shim.c  velox_runtime_wry_ffi.h
Tests/VeloxRuntimeWryTests/: AppKitHost.swift  EventDecodingTests.swift  EventLoopIntegrationTests.swift  MenuTests.swift  PermissionTests.swift  RuntimeTests.swift  TestUtilities.swift
runtime-wry-ffi/: Cargo.toml
runtime-wry-ffi/src/: lib.rs
(+69 files in other folders)
