[package]
name = "velox-runtime-wry-ffi"
version = "0.1.0"
edition = "2021"
description = "FFI helpers exposing wry- and tao-backed runtime functionality for Velox"
license = "MIT OR Apache-2.0"

[lib]
name = "velox_runtime_wry_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
tao = { path = "../../tao", default-features = false, features = ["rwh_06", "velox-testing"] }
wry = { path = "../../wry", default-features = false, features = ["os-webview", "protocol"] }
tray-icon = { version = "0.21", default-features = false, features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
rfd = "0.14"
tinyfiledialogs = "3.9"

[target.'cfg(target_os = "macos")'.dependencies]
muda = { version = "0.17", default-features = false, features = ["serde"] }

[features]
default = ["x11"]
x11 = ["tao/x11", "wry/x11"]
devtools = ["wry/devtools"]
macos-private-api = ["wry/fullscreen", "wry/transparent"]
objc-exception = []
tracing = []
macos-proxy = ["wry/mac-proxy"]
unstable = []
common-controls-v6 = []
