[package]
name = "velox-runtime-wry-ffi"
version = "0.1.0"
edition = "2021"
description = "FFI helpers exposing wry- and tao-backed runtime functionality for Velox"
license = "MIT OR Apache-2.0"

[lib]
name = "velox_runtime_wry_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Note: Don't disable default-features for tao - we need defaults for patched local builds
# where velox-testing is in defaults. Crates.io tao defaults are fine.
tao = { version = "0.34", features = ["rwh_06"] }
wry = { version = "0.53", default-features = false, features = ["os-webview", "protocol"] }
tray-icon = { version = "0.21", default-features = false, features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
rfd = "0.14"
tinyfiledialogs = "3.9"
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
muda = { version = "0.17", default-features = false, features = ["serde"] }

[features]
default = ["x11"]
x11 = ["tao/x11", "wry/x11"]
devtools = ["wry/devtools"]
macos-private-api = ["wry/fullscreen", "wry/transparent"]
objc-exception = []
tracing = []
macos-proxy = ["wry/mac-proxy"]
unstable = []
common-controls-v6 = []
# Enable when using local patched tao/wry with velox-testing feature
# The velox-testing feature must be enabled in the patched tao's Cargo.toml
local-dev = []
